# Praca-Inzynierska

./: .gitignore  CMakeLists.txt  Makefile  README.md  Tree1.txt  common.mk
src/: Concepts.hpp  MethodType.hpp
src/10Generate/: Functor.hpp  Makefile
src/10Generate/Even1/: EvenFunctor.cpp  EvenFunctor.hpp
src/10Generate/Fibonacci1/: FibonacciFunctor.cpp  FibonacciFunctor.hpp
src/10Generate/Fibonacci2/: FibonacciFunctor.cpp  FibonacciFunctor.hpp
src/10Generate/Matrix3/: Matrix.cpp  Matrix.hpp  MatrixConcepts.hpp  MatrixFunctor.cpp  MatrixFunctor.hpp
src/10Generate/RandomString2/: RandomStringFunctor.cpp  RandomStringFunctor.hpp
src/10RepeatFun/: Functor.hpp  Makefile  main.cpp
src/10RepeatFun/Even1/: EvenFunctor.cpp  EvenFunctor.hpp
src/10RepeatFun/Fibonacci2/: FibonacciFunctor.cpp  FibonacciFunctor.hpp
src/10RepeatFun/Matrix3/: Matrix.cpp  Matrix.hpp  MatrixConcepts.hpp  MatrixFunctor.cpp  MatrixFunctor.hpp
src/3Merge/: Makefile  Merger.hpp
src/3Merge/Points1/: Points.cpp  Points.hpp
src/3Merge/Trees2/: Tree.cpp  Tree.hpp
src/3Merge/Vector2/: IntVector.cpp  IntVector.hpp
src/3Merge/Vector3/: IntVector.cpp  IntVector.hpp
src/Algorithms/: Accumulator.hpp  Base.hpp  Concepts.hpp  DataWrapper.hpp  Functor.hpp  FunctorImpl.hpp  Generator.hpp  GeneratorImpl.hpp  Merger.hpp  MergerHelper.hpp  MergerImpl.hpp  MinMaxFinder.hpp  NthFinder.hpp  Regex.hpp  RemoveEraseIf.hpp  Remover.hpp  Sorter.hpp  Transformer.hpp  Uniquer.hpp
src/Algorithms/10Generate/: Generator.hpp  GeneratorHelper.hpp  GeneratorImpl.hpp
src/Algorithms/3Merge/: Merger.hpp  MergerHelper.hpp  MergerImpl.hpp
src/Algorithms/7NthElement/: NthFinder.hpp  NthFinderHelper.hpp
src/Concepts/: ContainerConcepts.hpp  DataTypeConcepts.hpp  MathConcepts.hpp
src/Structures/: BaseWrapper.hpp  CustomPair.hpp  CustomPairImpl.hpp  FibonacciFunctor.cpp  FibonacciFunctor.hpp  FibonacciImpl.hpp  IntVector.cpp  IntVector.hpp  IntVectorImpl.hpp  Matrix.cpp  Matrix.hpp  MatrixFunctor.cpp  MatrixFunctor.hpp  MatrixImpl.hpp  Points.cpp  Points.hpp  PointsImpl.hpp  RandomString.hpp  RandomStringFunctor.cpp  RandomStringFunctor.hpp  RandomStringImpl.hpp  Tree.cpp  Tree.hpp
src/Wrappers/: AccumulableWrapper.hpp  AddableWrapper.hpp  BaseWrapper.hpp  ComparableWrapper.hpp  GenerableWrapper.hpp  MixedWrappers.hpp
tests/: BaseTestFixture.hpp  CMakeLists.txt  ExampleMatrixes.hpp  Path.hpp
tests/10Generate/: CMakeLists.txt  GenerateTestFixture.hpp  Makefile  Path.hpp  TestFixture.hpp
tests/10Generate/Even1/: EvenTests.cpp  EvenTests.hpp
tests/10Generate/Fibonacci1/: FibonacciTests.cpp  FibonacciTests.hpp
tests/10Generate/Fibonacci2/: FibonacciTests.cpp  FibonacciTests.hpp
tests/10Generate/Matrix3/: ExampleMatrixes.hpp  MatrixTests.cpp  MatrixTests.hpp
tests/10Generate/RandomString2/: RandomStringTests.cpp  RandomStringTests.hpp
tests/10RepeatFun/: Makefile  TestFixture.hpp  main.cpp
tests/10RepeatFun/Even1/: EvenTests.cpp  EvenTests.hpp
tests/10RepeatFun/Fibonacci2/: FibonacciTests.cpp  FibonacciTests.hpp
tests/10RepeatFun/Matrix3/: MatrixTests.cpp  MatrixTests.hpp
tests/1MinMax/: CMakeLists.txt  MinMaxTestFixture.hpp
tests/1MinMax/BasicSet3/: UIntTests.cpp  UIntTests.hpp
tests/1MinMax/BasicVector1/: UIntTests.cpp  UIntTests.hpp
tests/1MinMax/VectorOfVectors2/: IntVectorTests.cpp  IntVectorTests.hpp
tests/1MinMax/VectorSet4/: IntVectorTests.cpp  IntVectorTests.hpp
tests/2Accumulate/: AccumulateTestFixture.hpp  CMakeLists.txt
tests/2Accumulate/Matrix3/: MatrixTests.cpp  MatrixTests.hpp
tests/2Accumulate/Points/: PointsTests.cpp  PointsTests.hpp
tests/2Accumulate/Points2/: PointsTests.cpp  PointsTests.hpp
tests/2Accumulate/UInt/: UIntTests.cpp  UIntTests.hpp
tests/2Accumulate/UInt1/: UIntTests.cpp  UIntTests.hpp
tests/3Merge/: CMakeLists.txt  Makefile  MergeTestFixture.hpp
tests/3Merge/Points1/: PointsTests.cpp  PointsTests.hpp
tests/3Merge/Trees2/: TreeTests.cpp  TreeTests.hpp
tests/3Merge/Vector3/: IntVectorTests.cpp  IntVectorTests.hpp  VectorTests.cpp  VectorTests.hpp
tests/4Sort/: CMakeLists.txt  SortTestFixture.hpp
tests/4Sort/Points1/: PointsTests.cpp  PointsTests.hpp
tests/4Sort/Vector3/: IntVectorTests.cpp  IntVectorTests.hpp
tests/5Sort/: CMakeLists.txt  SortTestFixture.hpp
tests/5Sort/Points1/: PointsTests.hpp
tests/5Sort/Vector3/: IntVectorTests.hpp
tests/5Transform/: CMakeLists.txt  TransformTestFixture.hpp
tests/5Transform/MatrixToIntVector1/: TransformTests.cpp  TransformTests.hpp
tests/5Transform/VectorToMap2/: TransformTests.cpp  TransformTests.hpp
tests/6Unique/: CMakeLists.txt  UniqueTestFixture.hpp
tests/6Unique/Points1/: PointsTests.cpp  PointsTests.hpp
tests/6Unique/Vector2/: IntVectorTests.cpp  IntVectorTests.hpp
tests/7NthElement/: CMakeLists.txt  NthElementTestFixture.hpp
tests/7NthElement/Points1/: PointsTests.cpp  PointsTests.hpp
tests/7NthElement/RandomString2/: RandomStringTests.cpp  RandomStringTests.hpp
tests/8Regex/: CMakeLists.txt  RegexGenerators.hpp  RegexTests.cpp  RegexTests.hpp
tests/9RemoveEraseIf/: CMakeLists.txt  RemoveEraseIfTestFixture.hpp
tests/9RemoveEraseIf/RandomString2/: RandomStringTests.cpp  RandomStringTests.hpp
tests/9RemoveEraseIf/Sequence1/: SequenceTests.cpp  SequenceTests.hpp
tests/Static/: CMakeLists.txt  StaticFixture.hpp  StaticTests.cpp
tests/Wrapper/: CMakeLists.txt  DynamicFeaturesFixture.hpp  DynamicFeaturesTests.cpp
